syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.opennms.core.ipc.common";
option java_outer_classname = "RpcProto";

// service definition for RpcMessage.
service OnmsIpc {
    // Streams Rpc messages between Minion and OpenNMS.
    rpc RpcStreaming (stream RpcMessage) returns (stream RpcMessage) {
    }
}


message RpcMessage {
    string rpc_id = 1;
    bytes rpc_content = 2;
    string system_id = 3;
    string location = 4;
    string module_id = 5;
    uint64 expiration_time = 6;
    int32 current_chunk_number = 7;
    int32 total_chunks = 8;
    map<string, string> tracing_info = 9;

}
